cdbs (0.4.97) unstable; urgency=low

  * Build-dependency autoresolving for debhelper now rely directly on
    debian/compat or DH_COMPAT.  If using a not yet finalized level,
    you will need to explicitly state which version of debhelper is
    acceptable, like this (usable for multistrap support):

      CDBS_BUILD_DEPENDS_rules_debhelper_v9 = debhelper (>= 8.1.3~)

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 12 Sep 2011 09:59:20 +0200

cdbs (0.4.90) unstable; urgency=low

  * DEB_MAKE_DESTDIRSKEL is now respected when flavors are used in
    makefile.mk.  python-autotools.mk continue to install all flavors
    into same destdir, but flavors enabled in different ways now install
    in per-flavor subdirs of the old destdir by default.

  * Python snippets now use packaging systems "python2" and "python3" by
    default, i.e. when DEB_PYTHON_SYSTEM is not set.
    All sensibly-named packages are then affected, unless any of new
    variables DEB_PYTHON2_PACKAGES or DEB_PYTHON3_PACKAGES is set.

    Python packaging systems "pycentral" and "pysupport" are unchanged:
    Only first package affected, unless DEB_PYTHON_PACKAGES is set.

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 24 Dec 2010 17:12:28 +0100

cdbs (0.4.85) unstable; urgency=low

  * Per-package variables in buildcore.mk and debhelper.mk now generally
    use the following scheme:
    + VAR_ALL applies to all packages
    + VAR_<package> applies to current package
    + VAR_DEFAULT applies to current package if VAR_pkg is empty
    Use of VAR without "suffix" for per-package variables is now
    deprecated, except for a few cases marked as TODO in those files.
    Closes: bug#582693, thanks to Rudy Godoy.
  * The following snippets are now deprecated:
    + dpatch.mk
    + simple-patchsys.mk
    + tarball.mk
    + perlmodule-vars.mk
    + perlmodule.mk
    Please use source format 3.0 and perl-makemaker.mk instead.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 21 Jun 2010 16:57:59 +0200
