@@ -25,6 +25,11 @@ _cdbs_class_python_module = 1
 include $(_cdbs_rules_path)/buildcore.mk$(_cdbs_makefile_suffix)
 include $(_cdbs_class_path)/python-vars.mk$(_cdbs_makefile_suffix)
 
+# This variable is deprecated.
+_cdbs_deprecated_vars += DEB_PYTHON_PRIVATE_MODULES_DIRS
+# New in 0.4.97.
+DEB_PYTHON_PRIVATE_MODULES_DIRS_ALL ?= $(DEB_PYTHON_PRIVATE_MODULES_DIRS)
+
 # pysupport/pycentral dependencies according to Python policy, appendix A
 CDBS_BUILD_DEPENDS_class_python-module_pysupport ?= python-support
 CDBS_BUILD_DEPENDS += $(if $(cdbs_python_pysupport),$(comma) $(CDBS_BUILD_DEPENDS_class_python-module_pysupport))
@@ -39,8 +44,8 @@ CDBS_BUILD_DEPENDS += $(if $(cdbs_python2),$(comma) $(CDBS_BUILD_DEPENDS_class_p
 CDBS_BUILD_DEPENDS_class_python-module_python3 ?= python3
 CDBS_BUILD_DEPENDS += $(if $(cdbs_python3),$(comma) $(CDBS_BUILD_DEPENDS_class_python-module_python3))
 
-CDBS_BUILD_DEPENDS_class_python-module_args ?= cdbs (>= 0.4.95~)
-CDBS_BUILD_DEPENDS += $(if $(call cdbs_expand_allvars,DEB_DH_PYTHONHELPER_ARGS),$(comma) $(CDBS_BUILD_DEPENDS_class_python-module_args))
+CDBS_BUILD_DEPENDS_class_python-module_args ?= cdbs (>= 0.4.97~)
+CDBS_BUILD_DEPENDS += $(if $(call cdbs_expand_allvars,DEB_DH_PYTHONHELPER_ARGS DEB_PYTHON_PRIVATE_MODULES_DIRS),$(comma) $(CDBS_BUILD_DEPENDS_class_python-module_args))
 
 $(patsubst %,testsanity/%,$(DEB_ALL_PACKAGES)) :: testsanity/% : 
 	$(if $(word 2,$(cdbs_curpythonsystems)),$(error binary package $(cdbs_curpkg) use both "python2" and "python3" packaging systems - either explicitly set DEB_PYTHON2_PACKAGES and/or DEB_PYTHON3_PACKAGES or set an alternative DEB_PYTHON_SYSTEM))
@@ -50,8 +55,8 @@ $(patsubst %,testsanity/%,$(DEB_ALL_PACKAGES)) :: testsanity/% :
 # * invoke public and private modules separately with default helpers
 $(patsubst %,binary-post-install/%,$(DEB_PACKAGES)) :: binary-post-install/%: binary-install-python/%
 $(patsubst %,binary-install-python/%,$(DEB_PACKAGES)) :: binary-install-python/%: binary-install/%
-	$(if $(DEB_PYTHON_SYSTEM),dh_$(cdbs_curpythonsystems) -p$(cdbs_curpkg) $(call cdbs_expand_curvar,DEB_DH_PYTHONHELPER_ARGS) $(DEB_PYTHON_PRIVATE_MODULES_DIRS) $(DEB_PYTHON_PRIVATE_MODULES_DIRS_$(cdbs_curpkg)))
+	$(if $(DEB_PYTHON_SYSTEM),dh_$(cdbs_curpythonsystems) -p$(cdbs_curpkg) $(call cdbs_expand_curvar,DEB_DH_PYTHONHELPER_ARGS) $(call cdbs_expand_curvar,DEB_PYTHON_PRIVATE_MODULES_DIRS))
 	$(if $(DEB_PYTHON_SYSTEM),,$(if $(cdbs_curpythonsystems),dh_$(cdbs_curpythonsystems) -p$(cdbs_curpkg) $(call cdbs_expand_curvar,DEB_DH_PYTHONHELPER_ARGS)))
-	$(if $(DEB_PYTHON_SYSTEM),,$(and $(cdbs_curpythonsystems),$(DEB_PYTHON_PRIVATE_MODULES_DIRS)$(DEB_PYTHON_PRIVATE_MODULES_DIRS_$(cdbs_curpkg)),dh_$(cdbs_curpythonsystems) -p$(cdbs_curpkg) $(call cdbs_expand_curvar,DEB_DH_PYTHONHELPER_ARGS) $(DEB_PYTHON_PRIVATE_MODULES_DIRS) $(DEB_PYTHON_PRIVATE_MODULES_DIRS_$(cdbs_curpkg))))
+	$(if $(DEB_PYTHON_SYSTEM),,$(and $(cdbs_curpythonsystems),$(call cdbs_expand_curvar,DEB_PYTHON_PRIVATE_MODULES_DIRS),dh_$(cdbs_curpythonsystems) -p$(cdbs_curpkg) $(call cdbs_expand_curvar,DEB_DH_PYTHONHELPER_ARGS) $(call cdbs_expand_curvar,DEB_PYTHON_PRIVATE_MODULES_DIRS)))
 
 endif
