@@ -237,8 +237,7 @@ ifneq ($(DEB_AUTO_UPDATE_DEBIAN_CONTROL),)
 	@bdep='$(strip $(CDBS_BUILD_DEPENDS))' perl -n \
 		-e 'my $$bd = $$ENV{"bdep"};' \
 		-e '$$bd =~ $(cdbs_re_squash_extended_space);' \
-		-e '$$bd =~ /\bcdbs \(>= 0\.4\.97~\)/ && $$bd =~ s/\bcdbs *\(>= (0\.4\.53|0\.4\.67~|0\.4\.69~|0\.4\.70~|0\.4\.72~|0\.4\.73~|0\.4\.75~|0\.4\.78~|0\.4\.85~|0\.4\.90~|0\.4\.91~|0\.4\.93~|0\.4\.95~)\)/, /g;' \
-		-e '$$bd =~ /\bcdbs \(>= 0\.4\.95~\)/ && $$bd =~ s/\bcdbs *\(>= (0\.4\.53|0\.4\.67~|0\.4\.69~|0\.4\.70~|0\.4\.72~|0\.4\.73~|0\.4\.75~|0\.4\.78~|0\.4\.85~|0\.4\.90~|0\.4\.91~|0\.4\.93~)\)/, /g;' \
+		-e '$$bd =~ /\bcdbs \(>= 0\.4\.97~\)/ && $$bd =~ s/\bcdbs *\(>= (0\.4\.53|0\.4\.67~|0\.4\.69~|0\.4\.70~|0\.4\.72~|0\.4\.73~|0\.4\.75~|0\.4\.78~|0\.4\.85~|0\.4\.90~|0\.4\.91~|0\.4\.93~)\)/, /g;' \
 		-e '$$bd =~ /\bcdbs \(>= 0\.4\.93~\)/ && $$bd =~ s/\bcdbs *\(>= (0\.4\.53|0\.4\.67~|0\.4\.69~|0\.4\.70~|0\.4\.72~|0\.4\.73~|0\.4\.75~|0\.4\.78~|0\.4\.85~|0\.4\.90~|0\.4\.91~)\)/, /g;' \
 		-e '$$bd =~ /\bcdbs \(>= 0\.4\.91~\)/ && $$bd =~ s/\bcdbs *\(>= (0\.4\.53|0\.4\.67~|0\.4\.69~|0\.4\.70~|0\.4\.72~|0\.4\.73~|0\.4\.75~|0\.4\.78~|0\.4\.85~|0\.4\.90~)\)/, /g;' \
 		-e '$$bd =~ /\bcdbs \(>= 0\.4\.90~\)/ && $$bd =~ s/\bcdbs *\(>= (0\.4\.53|0\.4\.67~|0\.4\.69~|0\.4\.70~|0\.4\.72~|0\.4\.73~|0\.4\.75~|0\.4\.78~|0\.4\.85~)\)/, /g;' \
